# JUCEture

./: .clang-format  .cursorrules  .gitignore  .gitmodules  AndroidGUISampleProject.jucer  LICENSE  README.md  docker-compose.yml
.circleci/: config.yml
.github/workflows/: android-build.yml
JuceLibraryCode/: JuceHeader.h
Source/cpp/: CMakeLists.txt  CoordinateAccessor.cpp  CoordinateAccessor.h  CoordinateConverter.cpp  CoordinateConverter.h  GestureEvent.cpp  GestureEvent.h  GestureMediator.cpp  GestureMediator.h  JUCEtureAPI.cpp  JUCEtureAPI.h  NotifierGestureFromOSJNI.cpp  NotifierGestureFromOSJNI.h
Source/cpp/Drag/: DragDetector.cpp  DragDetector.h  DragEndEvent.cpp  DragEndEvent.h  DragMoveEvent.cpp  DragMoveEvent.h  DragStartEvent.cpp  DragStartEvent.h  IDragHandler.h  IDragMediator.h
Source/cpp/LongTap/: ILongTapHandler.h  ILongTapMediator.h  LongTapDetector.cpp  LongTapDetector.h  LongTapEvent.cpp  LongTapEvent.h
Source/cpp/Pinch/: IPinchHandler.h  IPinchMediator.h  PinchDetector.cpp  PinchDetector.h  PinchEndEvent.cpp  PinchEndEvent.h  PinchScaleEvent.cpp  PinchScaleEvent.h  PinchStartEvent.cpp  PinchStartEvent.h
Source/cpp/SingleTap/: ISingleTapHandler.h  ISingleTapMediator.h  SingleTapDetector.cpp  SingleTapDetector.h  SingleTapEvent.cpp  SingleTapEvent.h
Source/java/com/juceture/android/: NotifierGestureFromAndroid.java
docker/android/: Dockerfile  debug.keystore  entrypoint.sh  local.properties.container
sampleApp/android/: gradle.properties  settings.gradle
sampleApp/android/app/: CMakeLists.txt  build.gradle
sampleApp/android/app/src/main/: AndroidManifest.xml
sampleApp/android/app/src/main/java/com/yourcompany/androidguisampleproject/: EdgeToEdgeActivity.java
sampleApp/android/app/src/main/res/values/: strings.xml  styles.xml
sampleApp/cpp/: GestureTestBox.cpp  GestureTestBox.h  Main.cpp  MainComponent.cpp  MainComponent.h
sampleApp/profile/: README.md  profileConfig.pbtxt
